Fix event filter on Firefox.

--- a/smallslive/static/sass/components/_event-row.scss
+++ b/smallslive/static/sass/components/_event-row.scss
@@ -107,7 +107,7 @@
 
   &:hover {
     .event-picture {
-      filter: grayscale(100%) brightness(50%) sepia() saturate(20%) hue-rotate(335deg);
+      filter: grayscale(100%) brightness(50%) sepia(100%) saturate(20%) hue-rotate(335deg);
     }
 
     .icon-overlay {
